Add support for multiple models

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -13,6 +13,24 @@
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{Connerney2022,
+       author = {{Connerney}, J.~E.~P. and {Timmins}, S. and {Oliversen}, R.~J. and {Espley}, J.~R. and {Joergensen}, J.~L. and {Kotsiaros}, S. and {Joergensen}, P.~S. and {Merayo}, J.~M.~G. and {Herceg}, M. and {Bloxham}, J. and {Moore}, K.~M. and {Mura}, A. and {Moirano}, A. and {Bolton}, S.~J. and {Levin}, S.~M.},
+        title = "{A New Model of Jupiter's Magnetic Field at the Completion of Juno's Prime Mission}",
+      journal = {Journal of Geophysical Research (Planets)},
+     keywords = {Jupiter planetary magnetic field, Jupiter dynamo, Jupiter interior, magnetic field generation, secular variation, Juno Mission},
+         year = 2022,
+        month = feb,
+       volume = {127},
+       number = {2},
+          eid = {e07055},
+        pages = {e07055},
+          doi = {10.1029/2021JE007055},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2022JGRE..12707055C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
+
 @article{Connerney2018,
        author = {{Connerney}, J.~E.~P. and {Kotsiaros}, S. and {Oliversen}, R.~J. and {Espley}, J.~R. and {Joergensen}, J.~L. and {Joergensen}, P.~S. and {Merayo}, J.~M.~G. and {Herceg}, M. and {Bloxham}, J. and {Moore}, K.~M. and {Bolton}, S.~J. and {Levin}, S.~M.},
         title = "{A New Model of Jupiter's Magnetic Field From Juno's First Nine Orbits}",
@@ -25,6 +43,21 @@
         pages = {2590-2596},
           doi = {10.1002/2018GL077312},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2018GeoRL..45.2590C},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Connerney1998,
+       author = {{Connerney}, J.~E.~P. and {Acu{\~n}a}, M.~H. and {Ness}, N.~F. and {Satoh}, T.},
+        title = "{New models of Jupiter's magnetic field constrained by the Io flux tube footprint}",
+      journal = {\jgr},
+     keywords = {Magnetospheric Physics: Planetary magnetospheres, Planetology: Fluid Planets: Magnetic fields and magnetism, Planetology: Fluid Planets: Magnetospheres, Planetology: Solar System Objects: Jupiter},
+         year = 1998,
+        month = jun,
+       volume = {103},
+       number = {A6},
+        pages = {11929-11940},
+          doi = {10.1029/97JA03726},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/1998JGR...10311929C},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
@@ -85,6 +118,36 @@
         pages = {49},
           doi = {10.1186/s40623-020-01288-x},
        adsurl = {https://ui.adsabs.harvard.edu/abs/2021EP&S...73...49A},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@article{Burton2009,
+title = {Model of Saturn's internal planetary magnetic field based on Cassini observations},
+journal = {Planetary and Space Science},
+volume = {57},
+number = {14},
+pages = {1706-1713},
+year = {2009},
+issn = {0032-0633},
+doi = {https://doi.org/10.1016/j.pss.2009.04.008},
+url = {https://www.sciencedirect.com/science/article/pii/S003206330900107X},
+author = {M.E. Burton and M.K. Dougherty and C.T. Russell},
+keywords = {Saturn magnetic field, Magnetosphere, Planetary magnetic fields},
+}
+
+@article{Dougherty2018,
+       author = {{Dougherty}, Michele K. and {Cao}, Hao and {Khurana}, Krishan K. and {Hunt}, Gregory J. and {Provan}, Gabrielle and {Kellock}, Stephen and {Burton}, Marcia E. and {Burk}, Thomas A. and {Bunce}, Emma J. and {Cowley}, Stanley W.~H. and {Kivelson}, Margaret G. and {Russell}, Christopher T. and {Southwood}, David J.},
+        title = "{Saturn's magnetic field revealed by the Cassini Grand Finale}",
+      journal = {Science},
+     keywords = {GEOCHEM PHYS, PLANET SCI, ONLINE},
+         year = 2018,
+        month = oct,
+       volume = {362},
+       number = {6410},
+          eid = {aat5434},
+        pages = {aat5434},
+          doi = {10.1126/science.aat5434},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2018Sci...362.5434D},
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
