--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -13,6 +13,34 @@
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+@article{Thebault2018,
+title = {A time-averaged regional model of the Hermean magnetic field},
+journal = {Physics of the Earth and Planetary Interiors},
+volume = {276},
+pages = {93-105},
+year = {2018},
+note = {Special Issue:15th SEDI conference},
+issn = {0031-9201},
+doi = {https://doi.org/10.1016/j.pepi.2017.07.001},
+url = {https://www.sciencedirect.com/science/article/pii/S0031920117300304},
+author = {Thébault, E.  and Langlais, B. and Oliveira, J.S. and Amit, H. and Leclercq, L.},
+}
+
+@article{Wardinski2019,
+       author = {{Wardinski}, I. and {Langlais}, B. and {Th{\'e}bault}, E.},
+        title = "{Correlated Time-Varying Magnetic Fields and the Core Size of Mercury}",
+      journal = {Journal of Geophysical Research (Planets)},
+         year = 2019,
+        month = aug,
+       volume = {124},
+       number = {8},
+        pages = {2178-2197},
+          doi = {10.1029/2018JE005835},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2019JGRE..124.2178W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+
 @article{Connerney2022,
        author = {{Connerney}, J.~E.~P. and {Timmins}, S. and {Oliversen}, R.~J. and {Espley}, J.~R. and {Joergensen}, J.~L. and {Kotsiaros}, S. and {Joergensen}, P.~S. and {Merayo}, J.~M.~G. and {Herceg}, M. and {Bloxham}, J. and {Moore}, K.~M. and {Mura}, A. and {Moirano}, A. and {Bolton}, S.~J. and {Levin}, S.~M.},
         title = "{A New Model of Jupiter's Magnetic Field at the Completion of Juno's Prime Mission}",
