--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -295,3 +295,32 @@ year = {2012}
   doi = {10.2151/jmsj.2018-019}, volume={96}, number={2}, pages={241--249},
   year={2018},
 }
+
+% Past codes
+
+@article{Wilson2023,
+       author = {{Wilson}, R.~J. and {Vogt}, M.~F. and {Provan}, G. and {Kamran}, A. and {James}, M.~K. and {Brennan}, M. and {Cowley}, S.~W.~H.},
+        title = "{Internal and External Jovian Magnetic Fields: Community Code to Serve the Magnetospheres of the Outer Planets Community}",
+      journal = {\ssr},
+     keywords = {Jupiter, Magnetic field, Spherical harmonic model, Current sheet model, Community code},
+         year = 2023,
+        month = feb,
+       volume = {219},
+       number = {1},
+          eid = {15},
+        pages = {15},
+          doi = {10.1007/s11214-023-00961-3},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2023SSRv..219...15W},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@software{Khurana2020,
+  author       = {Khurana, Krishan K.},
+  title        = {KMAG - Kronian Magnetic Field Model},
+  month        = oct,
+  year         = 2020,
+  publisher    = {Zenodo},
+  version      = {1.0},
+  doi          = {10.5281/zenodo.4080294},
+  url          = {https://doi.org/10.5281/zenodo.4080294}
+}
