--- a/ExploreFieldsInteractively.ipynb
+++ b/ExploreFieldsInteractively.ipynb
@@ -42,20 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "5d99e877-4a26-4838-bd0f-68f415c103d4",
    "metadata": {},
    "outputs": [],
    "source": [
     "import matplotlib.pyplot as plt\n",
-    "from ipywidgets import interact, interactive, fixed, interact_manual\n",
-    "import IPython.display as ipd\n",
-    "import ipywidgets as widgets\n",
-    "from planetmagfields import *\n",
-    "import ipywidgets as widgets\n",
-    "from ipywidgets import interactive, VBox\n",
-    "import re\n",
-    "from InteractiveMag import *"
+    "from ipywidgets import interactive, Dropdown, RadioButtons,FloatSlider,Output,HBox\n",
+    "from planetmagfields import Planet, get_models, utils\n",
+    "from InteractiveMag import *\n",
+    "%config InlineBackend.figure_format = 'svg'"
    ]
   },
   {
@@ -68,7 +64,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "72c0506a-bdb3-46f4-9886-f294990009c1",
    "metadata": {},
    "outputs": [
@@ -77,21 +73,20 @@
      "output_type": "stream",
      "text": [
       "All available panets and models are:\n",
-      "Mercury : ['Mercury_anderson2012', 'Mercury_thebault2018', 'Mercury_wardinski2019']\n",
-      "Earth : ['Earth_igrf13']\n",
-      "Jupiter : ['Jupiter_jrm09', 'Jupiter_jrm33', 'Jupiter_vip4']\n",
-      "Saturn : ['Saturn_cassini11', 'Saturn_cassini11+', 'Saturn_cassinisoi']\n",
-      "Uranus : ['Uranus_connerny1987']\n",
-      "Neptune : ['Neptune_connerny1991']\n",
-      "Ganymede : ['Ganymede_kivelson2002']\n"
+      "mercury : ['anderson2012' 'thebault2018' 'wardinski2019']\n",
+      "earth : ['igrf13']\n",
+      "jupiter : ['jrm09' 'jrm33' 'vip4']\n",
+      "saturn : ['cassini11' 'cassini11+' 'cassinisoi']\n",
+      "uranus : ['connerny1987']\n",
+      "neptune : ['connerny1991']\n",
+      "ganymede : ['kivelson2002']\n"
      ]
     }
    ],
    "source": [
-    "planet_names = extract_planet_names_from_file()\n",
     "print('All available panets and models are:')\n",
-    "planet_model_names = extract_models_for_planets(planet_names)\n",
-    "model_names = extract_only_model_names(planet_model_names)"
+    "planet_model_names = extract_models_for_planets()\n",
+    "# model_names = extract_only_model_names(planet_model_names)"
    ]
   },
   {
@@ -104,24 +99,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "1e19cd58-fdc7-477a-b029-fbf990a7f2ad",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Create a widget for selecting the background color\n",
-    "background_selector = widgets.RadioButtons(\n",
+    "background_selector = RadioButtons(\n",
     "    options=['Dark', 'Light'],\n",
     "    description='Background:',\n",
     "    disabled=False\n",
     ")\n",
     "\n",
     "# Create dropdowns for planet and model selection\n",
-    "planet_dropdown = widgets.Dropdown(options=planet_names, description='Planet:')\n",
-    "model_dropdown = widgets.Dropdown(options=model_names, description='Model:')\n",
+    "planet_dropdown = Dropdown(options= np.char.title(utils.planetlist), description='Planet:')\n",
+    "model_dropdown = Dropdown(options=get_models(\"mercury\"),description='Model:')\n",
     "\n",
     "# Set the slider range and step size for the radial distance 'r'\n",
-    "r_slider = widgets.FloatSlider(value=0.5, min=0.01, max=1, step=0.1, description='Radial level:')"
+    "r_slider = FloatSlider(value=1, min=0.01, max=1, step=0.1, description='Radial level:')"
    ]
   },
   {
@@ -134,14 +129,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "id": "1f29c2f8-c82a-43da-b5c9-af689b1c70de",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2b36da70428b45d2be73803fe49c1139",
+       "model_id": "c44a11c281ac44959ab13d26855e2fcf",
        "version_major": 2,
        "version_minor": 0
       },
@@ -154,6 +149,15 @@
     }
    ],
    "source": [
+    "out = Output()\n",
+    "\n",
+    "def update(*args):\n",
+    "    with out:\n",
+    "        model_dropdown.options = get_models(planet_dropdown.value)\n",
+    "\n",
+    "planet_dropdown.observe(update)\n",
+    "\n",
+    "\n",
     "# Use 'interactive' to create a widget for the function with the dropdowns, slider, and background selector\n",
     "widget = interactive(plot_intercat_mag_r, name=planet_dropdown, r=r_slider, model=model_dropdown, background=background_selector)\n",
     "\n",
@@ -165,17 +169,17 @@
    "id": "d6de7623-cbb9-4c48-8bdd-3892526143ef",
    "metadata": {},
    "source": [
-    "## Plot Figure Once Happy "
+    "## Save Figure Once Happy "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "2bdf02ac-1ee3-4ad5-968d-e33278f26986",
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.savefig('test1.png', dpi=600)"
+    "# plt.savefig('test1.png', dpi=600)"
    ]
   }
  ],
@@ -195,7 +199,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.10"
+   "version": "3.8.10"
   }
  },
  "nbformat": 4,
