Update version number, fix bug

--- a/ExploreFieldsInteractively.ipynb
+++ b/ExploreFieldsInteractively.ipynb
@@ -42,11 +42,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "id": "5d99e877-4a26-4838-bd0f-68f415c103d4",
    "metadata": {},
    "outputs": [],
    "source": [
+    "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "from ipywidgets import interactive, Dropdown, RadioButtons,FloatSlider,Output,HBox\n",
     "from planetmagfields import Planet, get_models, utils\n",
@@ -64,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "id": "72c0506a-bdb3-46f4-9886-f294990009c1",
    "metadata": {},
    "outputs": [
@@ -99,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "1e19cd58-fdc7-477a-b029-fbf990a7f2ad",
    "metadata": {},
    "outputs": [],
@@ -129,14 +130,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "1f29c2f8-c82a-43da-b5c9-af689b1c70de",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c44a11c281ac44959ab13d26855e2fcf",
+       "model_id": "0b4aede2a5ef463eaf2bff9365eb1af7",
        "version_major": 2,
        "version_minor": 0
       },
