Update paper, add benchmark figures

--- a/paper/paper.bib
+++ b/paper/paper.bib
@@ -328,6 +328,54 @@ year = {2012}
       adsnote = {Provided by the SAO/NASA Astrophysics Data System}
 }
 
+
+@software{James2024,
+  author       = {James, M. K. and
+                  Provan, G. and
+                  Kamran, A. and
+                  Wilson, R. J. and
+                  Vogt, M. F. and
+                  Brennan, M. J. and
+                  Cowley, S. W. H.},
+  title        = {JupiterMag},
+  month        = jan,
+  year         = 2024,
+  publisher    = {Zenodo},
+  version      = {v1.3.1},
+  doi          = {10.5281/zenodo.10602418},
+  url          = {https://doi.org/10.5281/zenodo.10602418}
+}
+
+@article{Finlay2020,
+       author = {{Finlay}, Christopher C. and {Kloss}, Clemens and {Olsen}, Nils and {Hammer}, Magnus D. and {T{\o}ffner-Clausen}, Lars and {Grayver}, Alexander and {Kuvshinov}, Alexey},
+        title = "{The CHAOS-7 geomagnetic field model and observed changes in the South Atlantic Anomaly}",
+      journal = {Earth, Planets and Space},
+     keywords = {Geomagnetism, Secular variation, Field modelling, South Atlantic Anomaly, Swarm, Physics - Geophysics},
+         year = 2020,
+        month = oct,
+       volume = {72},
+       number = {1},
+          eid = {156},
+        pages = {156},
+          doi = {10.1186/s40623-020-01252-9},
+archivePrefix = {arXiv},
+       eprint = {2010.11313},
+ primaryClass = {physics.geo-ph},
+       adsurl = {https://ui.adsabs.harvard.edu/abs/2020EP&S...72..156F},
+      adsnote = {Provided by the SAO/NASA Astrophysics Data System}
+}
+
+@software{Kloss2024,
+  author       = {Clemens Kloss},
+  title        = {ancklo/ChaosMagPy: ChaosMagPy v0.13},
+  month        = jan,
+  year         = 2024,
+  publisher    = {Zenodo},
+  version      = {v0.13},
+  doi          = {10.5281/zenodo.10598528},
+  url          = {https://doi.org/10.5281/zenodo.10598528}
+}
+
 @software{Khurana2020,
   author       = {Khurana, Krishan K.},
   title        = {KMAG - Kronian Magnetic Field Model},
@@ -338,6 +386,8 @@ year = {2012}
   doi          = {10.5281/zenodo.4080294},
   url          = {https://doi.org/10.5281/zenodo.4080294}
 }
+
+
 
 % Python packages
 
